// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoError Ampersand-error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="&amp;" display="block">
  <merror data-mjx-error="Misplaced '&amp;'" title="Misplaced '&amp;'">
    <mtext>&amp;</mtext>
  </merror>
</math>"
`;

exports[`NoError Argument-error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\frac{b}" display="block">
  <merror data-mjx-error="Missing argument for \\frac" title="Missing argument for \\frac">
    <mtext>\\frac{b}</mtext>
  </merror>
</math>"
`;

exports[`NoError Brace Superscript Error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x'^'" display="block">
  <merror data-mjx-error="Missing open brace for superscript" title="Missing open brace for superscript">
    <mtext>x'^'</mtext>
  </merror>
</math>"
`;

exports[`NoError Dimension Error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="a\\\\[abc] b" display="block">
  <merror data-mjx-error="Bracket argument to \\\\ must be a dimension" title="Bracket argument to \\\\ must be a dimension">
    <mtext>a\\\\[abc] b</mtext>
  </merror>
</math>"
`;

exports[`NoError Double Over 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="1 \\over 2 \\over 3" display="block">
  <merror data-mjx-error="Ambiguous use of \\over" title="Ambiguous use of \\over">
    <mtext>1 \\over 2 \\over 3</mtext>
  </merror>
</math>"
`;

exports[`NoError Double Prime Error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^\\prime'" display="block">
  <merror data-mjx-error="Prime causes double exponent: use braces to clarify" title="Prime causes double exponent: use braces to clarify">
    <mtext>x^\\prime'</mtext>
  </merror>
</math>"
`;

exports[`NoError Double sub error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x_2_3" display="block">
  <merror data-mjx-error="Double subscripts: use braces to clarify" title="Double subscripts: use braces to clarify">
    <mtext>x_2_3</mtext>
  </merror>
</math>"
`;

exports[`NoError Double under error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sum_2_3" display="block">
  <merror data-mjx-error="Double subscripts: use braces to clarify" title="Double subscripts: use braces to clarify">
    <mtext>\\sum_2_3</mtext>
  </merror>
</math>"
`;

exports[`NoError Double-over-error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sum^2^3" display="block">
  <merror data-mjx-error="Double exponent: use braces to clarify" title="Double exponent: use braces to clarify">
    <mtext>\\sum^2^3</mtext>
  </merror>
</math>"
`;

exports[`NoError Double-super-error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^2^3" display="block">
  <merror data-mjx-error="Double exponent: use braces to clarify" title="Double exponent: use braces to clarify">
    <mtext>x^2^3</mtext>
  </merror>
</math>"
`;

exports[`NoError EnvBadEnd 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{equation}a\\end{array}" display="block">
  <merror data-mjx-error="\\begin{equation} ended with \\end{array}" title="\\begin{equation} ended with \\end{array}">
    <mtext>\\begin{equation}a\\end{array}</mtext>
  </merror>
</math>"
`;

exports[`NoError EnvMissingEnd Array 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}a" display="block">
  <merror data-mjx-error="Illegal pream-token (a)" title="Illegal pream-token (a)">
    <mtext>\\begin{array}a</mtext>
  </merror>
</math>"
`;

exports[`NoError EnvMissingEnd Equation 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{equation}a" display="block">
  <merror data-mjx-error="Missing \\end{equation}" title="Missing \\end{equation}">
    <mtext>\\begin{equation}a</mtext>
  </merror>
</math>"
`;

exports[`NoError ErroneousNestingEq 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{equation}\\begin{eqnarray}\\end{eqnarray}\\end{equation}" display="block">
  <merror data-mjx-error="Erroneous nesting of equation structures" title="Erroneous nesting of equation structures">
    <mtext>\\begin{equation}\\begin{eqnarray}\\end{eqnarray}\\end{equation}</mtext>
  </merror>
</math>"
`;

exports[`NoError ExtraAlignTab 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\cases{b &amp; l &amp; k}" display="block">
  <merror data-mjx-error="Extra alignment tab in \\cases text" title="Extra alignment tab in \\cases text">
    <mtext>\\cases{b &amp; l &amp; k}</mtext>
  </merror>
</math>"
`;

exports[`NoError ExtraCloseLooking1 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sqrt[3}" display="block">
  <merror data-mjx-error="Extra close brace while looking for ']'" title="Extra close brace while looking for ']'">
    <mtext>\\sqrt[3}</mtext>
  </merror>
</math>"
`;

exports[`NoError ExtraCloseLooking2 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\root [3} \\of 5 " display="block">
  <merror data-mjx-error="Extra close brace while looking for \\of" title="Extra close brace while looking for \\of">
    <mtext>\\root [3} \\of 5 </mtext>
  </merror>
</math>"
`;

exports[`NoError ExtraCloseMissingOpen 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x}" display="block">
  <merror data-mjx-error="Extra close brace or missing open brace" title="Extra close brace or missing open brace">
    <mtext>x}</mtext>
  </merror>
</math>"
`;

exports[`NoError ExtraCloseMissingOpen 2 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sqrt}" display="block">
  <merror data-mjx-error="Extra close brace or missing open brace" title="Extra close brace or missing open brace">
    <mtext>\\sqrt}</mtext>
  </merror>
</math>"
`;

exports[`NoError ExtraLeftMissingRight 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\left\\{x" display="block">
  <merror data-mjx-error="Extra \\left or missing \\right" title="Extra \\left or missing \\right">
    <mtext>\\left\\{x</mtext>
  </merror>
</math>"
`;

exports[`NoError ExtraOpenMissingClose 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="{x" display="block">
  <merror data-mjx-error="Extra open brace or missing close brace" title="Extra open brace or missing close brace">
    <mtext>{x</mtext>
  </merror>
</math>"
`;

exports[`NoError Hash Error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="#" display="block">
  <merror data-mjx-error="You can't use 'macro parameter character #' in math mode" title="You can't use 'macro parameter character #' in math mode">
    <mtext>#</mtext>
  </merror>
</math>"
`;

exports[`NoError Incorrect Move Root 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sqrt[\\uproot-2.5\\beta]{k}" display="block">
  <merror data-mjx-error="The argument to \\uproot must be an integer" title="The argument to \\uproot must be an integer">
    <mtext>\\sqrt[\\uproot-2.5\\beta]{k}</mtext>
  </merror>
</math>"
`;

exports[`NoError InvalidEnv 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{\\ff}kk\\end{\\ff}" display="block">
  <merror data-mjx-error="Invalid environment name '\\ff'" title="Invalid environment name '\\ff'">
    <mtext>\\begin{\\ff}kk\\end{\\ff}</mtext>
  </merror>
</math>"
`;

exports[`NoError Limits Error 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="+\\limits^2" display="block">
  <merror data-mjx-error="\\limits is allowed only on operators" title="\\limits is allowed only on operators">
    <mtext>+\\limits^2</mtext>
  </merror>
</math>"
`;

exports[`NoError Middle with Right 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\middle|\\right)" display="block">
  <merror data-mjx-error="Extra \\middle" title="Extra \\middle">
    <mtext>\\middle|\\right)</mtext>
  </merror>
</math>"
`;

exports[`NoError Misplaced Cr 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="a\\cr b" display="block">
  <merror data-mjx-error="Misplaced '\\cr'" title="Misplaced '\\cr'">
    <mtext>a\\cr b</mtext>
  </merror>
</math>"
`;

exports[`NoError Misplaced Move Root 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\uproot{2}\\sqrt[3]{a}" display="block">
  <merror data-mjx-error="\\uproot can appear only within a root" title="\\uproot can appear only within a root">
    <mtext>\\uproot{2}\\sqrt[3]{a}</mtext>
  </merror>
</math>"
`;

exports[`NoError Misplaced hline 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\hline" display="block">
  <merror data-mjx-error="Misplaced '\\hline'" title="Misplaced '\\hline'">
    <mtext>\\hline</mtext>
  </merror>
</math>"
`;

exports[`NoError Missing Right 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\left(\\middle|" display="block">
  <merror data-mjx-error="Extra \\left or missing \\right" title="Extra \\left or missing \\right">
    <mtext>\\left(\\middle|</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingArgFor 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sqrt" display="block">
  <merror data-mjx-error="Missing argument for \\sqrt" title="Missing argument for \\sqrt">
    <mtext>\\sqrt</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingBeginExtraEnd 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\end{array}" display="block">
  <merror data-mjx-error="Missing \\begin{array} or extra \\end{array}" title="Missing \\begin{array} or extra \\end{array}">
    <mtext>\\end{array}</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingBoxFor 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\raise{2pt}" display="block">
  <merror data-mjx-error="Missing box for \\raise" title="Missing box for \\raise">
    <mtext>\\raise{2pt}</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingCloseBrace 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sqrt{" display="block">
  <merror data-mjx-error="Missing close brace" title="Missing close brace">
    <mtext>\\sqrt{</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingCloseBrace2 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{c" display="block">
  <merror data-mjx-error="Missing close brace" title="Missing close brace">
    <mtext>\\begin{array}{c</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingCloseBracket 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sqrt[3{x}" display="block">
  <merror data-mjx-error="Could not find closing ']' for argument to \\sqrt" title="Could not find closing ']' for argument to \\sqrt">
    <mtext>\\sqrt[3{x}</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingDimOrUnits 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\rule{}" display="block">
  <merror data-mjx-error="Missing dimension or its units for \\rule" title="Missing dimension or its units for \\rule">
    <mtext>\\rule{}</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingLeftExtraRight 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x\\right\\}" display="block">
  <merror data-mjx-error="Missing \\left or extra \\right" title="Missing \\left or extra \\right">
    <mtext>x\\right\\}</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingOpenForSub 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x__" display="block">
  <merror data-mjx-error="Missing open brace for subscript" title="Missing open brace for subscript">
    <mtext>x__</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingOpenForSup 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^^" display="block">
  <merror data-mjx-error="Missing open brace for superscript" title="Missing open brace for superscript">
    <mtext>x^^</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingOrUnrecognizedDelim 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\genfrac{(}{a}{}{2}{1}{2}" display="block">
  <merror data-mjx-error="Undefined control sequence \\genfrac" title="Undefined control sequence \\genfrac">
    <mtext>\\genfrac{(}{a}{}{2}{1}{2}</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingOrUnrecognizedDelim1 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\left\\alpha b" display="block">
  <merror data-mjx-error="Missing or unrecognized delimiter for \\left" title="Missing or unrecognized delimiter for \\left">
    <mtext>\\left\\alpha b</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingOrUnrecognizedDelim2 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\left( b\\right" display="block">
  <merror data-mjx-error="Missing or unrecognized delimiter for \\right" title="Missing or unrecognized delimiter for \\right">
    <mtext>\\left( b\\right</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingScript Sub 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x_" display="block">
  <merror data-mjx-error="Missing superscript or subscript argument" title="Missing superscript or subscript argument">
    <mtext>x_</mtext>
  </merror>
</math>"
`;

exports[`NoError MissingScript Sup 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x^" display="block">
  <merror data-mjx-error="Missing superscript or subscript argument" title="Missing superscript or subscript argument">
    <mtext>x^</mtext>
  </merror>
</math>"
`;

exports[`NoError Multiple Move Root 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\sqrt[\\uproot{-2}\\uproot{2}\\beta]{k}" display="block">
  <merror data-mjx-error="Multiple use of \\uproot" title="Multiple use of \\uproot">
    <mtext>\\sqrt[\\uproot{-2}\\uproot{2}\\beta]{k}</mtext>
  </merror>
</math>"
`;

exports[`NoError Orphan Middle 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\middle|" display="block">
  <merror data-mjx-error="Extra \\middle" title="Extra \\middle">
    <mtext>\\middle|</mtext>
  </merror>
</math>"
`;

exports[`NoError Token Illegal Type 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\mmlToken{mk}[]{}" display="block">
  <merror data-mjx-error="mk is not a token element" title="mk is not a token element">
    <mtext>\\mmlToken{mk}[]{}</mtext>
  </merror>
</math>"
`;

exports[`NoError Token Invalid Attribute 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\mmlToken{mi}[m1=true]{}" display="block">
  <merror data-mjx-error="Invalid MathML attribute: m1" title="Invalid MathML attribute: m1">
    <mtext>\\mmlToken{mi}[m1=true]{}</mtext>
  </merror>
</math>"
`;

exports[`NoError Token Unknown Attribute 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\mmlToken{mo}[nothing=&quot;something&quot;]{}" display="block">
  <merror data-mjx-error="nothing is not a recognized attribute for mo" title="nothing is not a recognized attribute for mo">
    <mtext>\\mmlToken{mo}[nothing=&quot;something&quot;]{}</mtext>
  </merror>
</math>"
`;

exports[`NoError Token Wrong Attribute 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\mmlToken{mi}[movablelimit=true]{}" display="block">
  <merror data-mjx-error="movablelimit is not a recognized attribute for mi" title="movablelimit is not a recognized attribute for mi">
    <mtext>\\mmlToken{mi}[movablelimit=true]{}</mtext>
  </merror>
</math>"
`;

exports[`NoError Token Wrong Type 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\mmlToken{mrow}[]{}" display="block">
  <merror data-mjx-error="mrow is not a token element" title="mrow is not a token element">
    <mtext>\\mmlToken{mrow}[]{}</mtext>
  </merror>
</math>"
`;

exports[`NoError TokenNotFoundForCommand 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\root {3] \\of 5" display="block">
  <merror data-mjx-error="Could not find \\of for \\root" title="Could not find \\of for \\root">
    <mtext>\\root {3] \\of 5</mtext>
  </merror>
</math>"
`;

exports[`NoError Undefined-CS 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\nonsense" display="block">
  <merror data-mjx-error="Undefined control sequence \\nonsense" title="Undefined control sequence \\nonsense">
    <mtext>\\nonsense</mtext>
  </merror>
</math>"
`;

exports[`NoError Undefined-Env 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{nonsense} a \\end{nonsense}" display="block">
  <merror data-mjx-error="Unknown environment 'nonsense'" title="Unknown environment 'nonsense'">
    <mtext>\\begin{nonsense} a \\end{nonsense}</mtext>
  </merror>
</math>"
`;

exports[`NoError UnsupportedHFill 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="a\\hfill b" display="block">
  <merror data-mjx-error="Unsupported use of \\hfill" title="Unsupported use of \\hfill">
    <mtext>a\\hfill b</mtext>
  </merror>
</math>"
`;
